# workout-api-fast

./: .gitignore  README.md  ROADMAP.md  compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 7add046994b4_init_db.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: atletas.py  categorias.py  centros_treinamento.py
backend/app/core/: config.py  db.py
backend/app/tests/: conftest.py  test_categorias.py  test_centros_treinamento.py
front-tuto/: fase-1.md  fase-2.md
frontend/: Dockerfile
frontend/src/: App.tsx  main.tsx
frontend/src/api/: atletaService.ts  categoriaService.ts  centroTreinamentoService.ts  client.ts
frontend/src/hooks/: useAtletas.ts  useCategorias.ts  useCentrosTreinamento.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
