[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "psycopg[binary]",
    "pydantic-settings",
    "alembic",
    "uvicorn"
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # erros de estilo
    "F",  # erros lógicos
    "I",  # ordenação de imports (isort)
    "UP", # upgrade de sintaxe python
]